# starklend-protocol

./: README.md  setup.cfg
contracts/: Ctoken.cairo  comptroller.cairo
contracts/interfaces/: CtokenInterface.cairo
contracts/starlink/: access_controller.cairo
contracts/starlink/ocr2/: Mock_Aggregator.cairo  aggregator.cairo  proxy.cairo  validator.cairo
