[metadata]
name = starklend-contracts
version = attr: starklend-contracts.__version__
description = Starklend Cairo Contracts
author = F8
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/StarkLend/starklend-protocol
platforms = any
classifiers =
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata>=4.0
    cairo-nile==0.6.1

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
openzeppelin = "*.cairo"

[options.extras_require]
testing =
    setuptools
    tox
    pytest
